generated/manifests/prod-axon/coder/Deployment-coder-provisioner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: coder-provisioner
    app.kubernetes.io/name: coder-provisioner
    app.kubernetes.io/part-of: coder-provisioner
  name: coder-provisioner
  namespace: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coder-provisioner
      app.kubernetes.io/name: coder-provisioner
  template:
    metadata:
      annotations:
        app.kubernetes.io/component: provisionerd
      labels:
        app.kubernetes.io/instance: coder-provisioner
        app.kubernetes.io/name: coder-provisioner
        app.kubernetes.io/part-of: coder-provisioner
    spec:
      containers:
        - args:
            - provisionerd
            - start
          command:
            - /opt/coder
          image: ghcr.io/coder/coder:v2.34.4
          imagePullPolicy: IfNotPresent
          lifecycle: {}
          name: coder
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 2000m
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts: []
      restartPolicy: Always
      serviceAccountName: coder-provisioner
      terminationGracePeriodSeconds: 600
      volumes: []
