generated/manifests/prod-axon/coder/Deployment-coder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    app.kubernetes.io/instance: coder
    app.kubernetes.io/name: coder
    app.kubernetes.io/part-of: coder
  name: coder
  namespace: coder
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: coder
      app.kubernetes.io/name: coder
  template:
    metadata:
      annotations:
        app.kubernetes.io/component: coderd
      labels:
        app.kubernetes.io/instance: coder
        app.kubernetes.io/name: coder
        app.kubernetes.io/part-of: coder
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/instance
                      operator: In
                      values:
                        - coder
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - args:
            - server
          command:
            - /opt/coder
          image: ghcr.io/coder/coder:v2.37.2
          imagePullPolicy: IfNotPresent
          lifecycle: {}
          name: coder
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
          resources:
            limits:
              cpu: 2000m
              memory: 4096Mi
            requests:
              cpu: 2000m
              memory: 4096Mi
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 1000
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts: []
      restartPolicy: Always
      serviceAccountName: coder
      terminationGracePeriodSeconds: 60
      volumes: []
